[project]
name = "mcp-servers"
version = "0.1.0"
description = "A collection of custom MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "donetick-mcp",
    "caldav-mcp",
    "tandoor-mcp",
    "joplin-mcp",
    "browser-mcp",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3.0",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
donetick-mcp = { workspace = true }
caldav-mcp = { workspace = true }
tandoor-mcp = { workspace = true }
joplin-mcp = { workspace = true }
browser-mcp = { workspace = true }
